# python-gb32960

./: .gitignore  pyproject.toml  requirements-dev.txt  setup.cfg
.github/workflows/: check.yml
src/gb32960/: types.py
src/gb32960/protocol_text_locales/: default.py  zhcnutf8.py
src/test/: conftest.py  test_hello.py  test_types_basic.py  test_types_header.py  test_types_time.py
