[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gb32960"
description = "GB32960 protocol tools, including encoding/decoding, and validation suite."
readme = "README.md"
license = { file = "LICENSE" }
keywords = ["gb32960", "protocol", "vehicle", "telematics"]
authors = [
    { name = "Ji Bin", email = "matrixji@live.com" },
]
maintainers = [
    { name = "Ji Bin", email = "matrixji@live.com" },
]
requires-python = ">=3.8"
dynamic = ["version"]
dependencies = [
    "pytz"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]

[tool.setuptools.dynamic]
version = { attr = "gb32960.__version__" }

[project.urls]
Homepage = "https://github.com/matrixji/python-gb32960"
Home-page = "https://github.com/matrixji/python-gb32960"
Repository = "https://github.com/matrixji/python-gb32960.git"
Issues = "https://github.com/matrixji/python-gb32960/issues"

[tool.coverage.run]
branch = true
source = ["gb32960"]

[tool.coverage.report]
ignore_errors = true

[tool.pytest.ini_options]
addopts = [
    "--cov=gb32960",
    "--cov-report=term-missing",
    "--cov-report=xml",
    "--cov-branch",
    "--cov-context=test"
]


[tool.ruff]
exclude = [
    "venv",
    "test"
]
line-length = 119
target-version = "py38"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "B"]
fixable = ["ALL"]
